# cmake-tutorial

./: CMakeLists.txt  README.md
lib/: sum.cpp
src/: calculator.cpp
test/: CMakeLists.txt  sum_test.cpp
